# plinken-wclap

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  REGISTRY.md  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/site/: .gitignore  README.md  _headers  package.json  svelte.config.js  tsconfig.json  wrangler.jsonc
apps/site/src/: app.css  app.html
apps/site/src/lib/: LibraryBrowser.svelte  mock-connection.mjs
apps/site/src/lib/market/: client.ts
apps/site/src/routes/: +page.svelte
apps/site/src/routes/designer/: +page.svelte
apps/site/static/: shelf.json
apps/site/static/wclap/: as-clap-example.wclap.wasm  clack-polysynth.wasm  com.plinken.auto-pan.wclap.wasm
apps/wclap-host/: DESIGN.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/wclap-host/public/: plugin-proxy-sw.js  shelf.json
apps/wclap-host/public/samples/: clack-gain.wasm
apps/wclap-host/scripts/: build-shelf.mjs
apps/wclap-host/src/: iframe-bridge.ts  main.ts  plugin-loader.ts  styles.css  ui.ts  vite-env.d.ts
apps/wclap-host/src/market/: mock-data.ts  types.ts
apps/wclap-host/src/wclap-runtime/: cap-wasm-memory.ts  cbor.mjs  chain-worklet.mjs  clap-audionode.d.mts  clap-audionode.mjs  clap-audioworkletprocessor.mjs  host-imports.mjs  host-rust.wasm  host.wasm
apps/wclap-host/worker/: index.js
crates/nksf-codec/: Cargo.toml  README.md
crates/nksf-codec/src/: lib.rs
crates/nksf-codec/wit/: nksf.wit
crates/plinken-dsp/: Cargo.toml
crates/plinken-dsp/src/: envelope.rs  filter.rs  fx.rs  lfo.rs  lib.rs  math.rs  noise.rs  osc.rs  smoother.rs
crates/sample-core/: Cargo.toml
crates/sample-core/src/: assembler.rs  lib.rs  sample.rs  voice.rs
crates/wclap-host/: Cargo.toml  README.md  build.rs
crates/wclap-host/docs/: clap-extensions.md  implementation-plan.md  m1-first-sound.md  wasi-surface.md
crates/wclap-host/examples/: tiny_host.rs
crates/wclap-host/src/: bundle.rs  bytes.rs  call.rs  clap.rs  engine.rs  error.rs  host.rs  host_stubs.rs  imports.rs  instance.rs  lib.rs  plugin.rs  wasi.rs  wclap_instance.rs
crates/wclap-plugin/: Cargo.toml
crates/wclap-plugin/src/: lib.rs
plugins/: README.md
plugins/com.plinken/: README.md  ROADMAP.md
plugins/com.plinken/auto-pan/: README.md  asconfig.json  package.json  plugin.json
plugins/com.plinken/auto-pan/assembly/: auto-pan.ts  index.ts
plugins/com.plinken/auto-pan/ui/: index.html
plugins/com.plinken/brick-limiter/: Cargo.toml  README.md  package.json  plugin.json
plugins/com.plinken/brick-limiter/src/: lib.rs
plugins/com.plinken/brick-limiter/ui/: index.html
plugins/com.plinken/chorus/: Cargo.toml  build.rs  package.json  plugin.json
plugins/com.plinken/chorus/src/: lib.rs
plugins/com.plinken/chorus/ui/: index.html
plugins/com.plinken/compressor/: Cargo.toml  package.json  plugin.json
plugins/com.plinken/compressor/src/: lib.rs
plugins/com.plinken/compressor/ui/: index.html
plugins/com.plinken/delay/: Cargo.toml  package.json  plugin.json
plugins/com.plinken/delay/src/: lib.rs
plugins/com.plinken/delay/ui/: index.html
plugins/com.plinken/eq/: Cargo.toml  package.json  plugin.json
plugins/com.plinken/eq/src/: lib.rs
plugins/com.plinken/eq/ui/: index.html
plugins/com.plinken/organ/: Organ.cmajor  Organ.cmajorpatch  README.md  package.json  plugin.json
plugins/com.plinken/organ/ui/: index.html
plugins/com.plinken/piano/: Piano.cmajor  Piano.cmajorpatch  README.md  package.json  plugin.json
plugins/com.plinken/piano/ui/: index.html
plugins/com.plinken/pulze/: Cargo.toml  README.md  SELF-CONTAINED-PLAN.md  build.rs  package.json  plugin.json
plugins/com.plinken/pulze/src/: lib.rs  pads.rs
plugins/com.plinken/pulze/ui/: index.html
plugins/com.plinken/reverb/: Cargo.toml  package.json  plugin.json
plugins/com.plinken/reverb/src/: lib.rs
plugins/com.plinken/reverb/ui/: index.html
plugins/com.plinken/saturator/: Cargo.toml  LICENSE  package.json  plugin.json
plugins/com.plinken/saturator/src/: lib.rs
plugins/com.plinken/saturator/ui/: index.html
plugins/com.plinken/spectrum/: Cargo.toml  README.md  build.rs  package.json  plugin.json
plugins/com.plinken/spectrum/src/: lib.rs
plugins/com.plinken/spectrum/ui/: index.html
plugins/com.plinken/synome/: Cargo.toml  README.md  package.json  plugin.json
plugins/com.plinken/synome/src/: lib.rs  params.rs  synth.rs
plugins/com.plinken/synome/ui/: index.html
plugins/com.plinken/vocal-limiter/: Cargo.toml  README.md  package.json  plugin.json
plugins/com.plinken/vocal-limiter/src/: lib.rs
plugins/com.plinken/vocal-limiter/ui/: index.html
scripts/: build-cmaj-wclap.sh  build-shelf.mjs  bundle-wclap.mjs  cmaj-wclap-shim.cpp
spec/: wclap-preset.md
widget-lib/: AUTHORING.md  CATALOGUE.md  DESIGNER.md  README.md  fader.mjs  index.mjs  knob.mjs  meter.mjs  package.json  toggle.mjs  utils.mjs  widget-base.mjs  widget-lib.css
widget-lib/fonts/: README.md
widgets/: cbor.mjs  fader.mjs  library-browser.mjs  meter.mjs  pot.mjs  toggle.mjs  transport.mjs  widgets.css
