[workspace]
resolver = "2"
members = [
    "crates/wclap-host",
    "crates/wclap-plugin",
    "plugins/com.plinken/brick-limiter",
    "plugins/com.plinken/spectrum",
    "plugins/com.plinken/synome",
    "plugins/com.plinken/vocal-limiter",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
