[package]
name = "wclap-host"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { version = "1", default-features = false }
minicbor = { version = "0.25", default-features = false, features = ["alloc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
