[package]
name = "com-plinken-brick-limiter"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wclap-plugin = { path = "../../../crates/wclap-plugin", default-features = false }
fundsp = { version = "0.23", default-features = false, features = ["std"] }
