[package]
name = "com-plinken-synome"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# std plugin (like eq/compressor): default-features = false drops the
# no_std runtime (dlmalloc + panic handler) so std's own are used.
wclap-plugin = { path = "../../../crates/wclap-plugin", default-features = false }
plinken-dsp = { path = "../../../crates/plinken-dsp" }
plinken-sample-core = { path = "../../../crates/sample-core" }
